Fix nav link color in dark mode

--- a/site/docs/css/mkdocs.css
+++ b/site/docs/css/mkdocs.css
@@ -14,6 +14,6 @@
 }
 
 .md-nav__item li li a {
-    color: black;
+    color: var(--md-secondary-fg-color);
     font-size: 0.9em;
 }
